--- a/rank.html
+++ b/rank.html
@@ -92,12 +92,14 @@
       </div>
     </navbar>
     <!-- banner -->
+    <!-- 記得外推 圖才會完整 -->
     <section
-      class="allstar_banner bgp-center bgs-contain"
+      class="allstar_banner bgp-bottom bgs-cover mb-3"
       style="
         background-image: url(./nbaWeb/allstar-2016-011016-top-1.jpg);
         background-repeat: no-repeat;
-        height: 550px;
+        height: 500px;
+        margin-top: 104px !important;
       "
     ></section>
     <div class="container-xxl">
