--- a/storyItem.html
+++ b/storyItem.html
@@ -187,7 +187,7 @@
             <a
               type="button"
               href="product.html"
-              class="btn btn-nbaBlue rounded-pill fs-4 btnRwd mx-auto mb-4"
+              class="btn btn-nbaBlue rounded-pill fs-4 btnRwd mx-auto mb-4 stretched-link"
               >MERCH</a
             >
           </div>
