--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
             class="of-cover op-top w-100"
             alt="..."
             height="810"
+            style="margin-top: 104px !important"
           />
         </div>
         <div class="carousel-item" data-bs-interval="2000">
@@ -170,6 +171,7 @@
             class="d-block w-100 op-center of-cover"
             alt="..."
             height="810"
+            style="margin-top: 104px !important"
           />
         </div>
       </div>
@@ -196,9 +198,9 @@
       <!-- 募款 -->
       <!-- row 都加 flex-row 比較清楚~~~ -->
       <section
-        class="flex-lg-row flex-column-reverse d-flex justify-content-center align-items-center row-cols-1 row-cols-lg-2 pt-5 mx-6 px-0 px-lg-7 g-5"
+        class="flex-lg-row flex-column-reverse d-flex align-items-center row-cols-1 row-cols-lg-2 pt-5 mx-lg-6 gap-5"
       >
-        <div class="col me-md-5">
+        <div class="col">
           <a
             class="example-image-link position-relative d-flex justify-content-center align-items-center"
             href="nbaWeb/olivier-collet-H7cIqigZOBo-unsplash.jpg"
@@ -265,7 +267,8 @@
         />
         <h2>PRODUCTS</h2>
       </div>
-      <section class="row row-cols-2 row-cols-lg-4 g-4 px-3">
+      <!-- 目前的排版會感覺上下都沒有對齊，可先避免過多的水平間距調整 -->
+      <section class="row row-cols-2 row-cols-lg-4 g-4">
         <div class="col animated_right">
           <div class="card w-100 position-relation newproduct_img">
             <div class="newproduct_cloth">
@@ -335,7 +338,7 @@
           type="button"
           href="product.html"
           class="btn btn-outline-dark rounded-pill fs-5 me-md-3 me-0 mb-3 mb-md-0"
-          >SEE MORE PRODUCT</a
+          >MORE PRODUCT</a
         >
         <a
           type="button"
@@ -362,7 +365,8 @@
       <p class="fs-6 text-dark text-center mb-5">
         which are the top-selling NBA jerseys?
       </p>
-      <section class="row row-cols-1 row-cols-lg-3 g-4 rank_card mx-2 mt-5">
+      <!-- 目前的排版會感覺上下都沒有對齊，可先避免過多的水平間距調整 -->
+      <section class="row row-cols-1 row-cols-lg-3 g-4 rank_card mt-5">
         <div class="col mb-5 mb-lg-0">
           <div class="card" style="height: 424px">
             <img
@@ -453,7 +457,7 @@
           type="button"
           href="story.html"
           class="btn btn-outline-dark rounded-pill my-5 fs-5 sellbtn_Rwd"
-          >SEE MORE LISTS</a
+          >MORE LISTS</a
         >
       </div>
 
