修正：單一故事圖片路徑

--- a/storyItem.html
+++ b/storyItem.html
@@ -172,7 +172,7 @@
             />
             <div
               class="allstaritem_back img-fluid bgp-center bgs-cover"
-              style="background-image: url(../nbaWeb/1126209.png)"
+              style="background-image: url(./nbaWeb/1126209.png)"
             ></div>
             <div class="card-body fs-6">
               <ul class="list-unstyled fsRwd">
